{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 113,
  "lineage": "0430ef48-eb5f-5032-fc34-0a09d5d13566",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkInterfaces/nic-monitoring",
            "internal_domain_name_suffix": "bawxvtugjueudj4pjnn4ft5osa.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/public-ip",
                "subnet_id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet1"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "nic-monitoring",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "rg-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.main",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkInterfaces/nic-monitoring|/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-ssh",
            "network_interface_id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkInterfaces/nic-monitoring",
            "network_security_group_id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-ssh"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-ssh",
            "location": "eastus",
            "name": "nsg-ssh",
            "resource_group_name": "rg-monitoring",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/networkSecurityGroups/nsg-web",
            "location": "eastus",
            "name": "nsg-web",
            "resource_group_name": "rg-monitoring",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/publicIPAddresses/public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "public-ip",
            "resource_group_name": "rg-monitoring",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-monitoring",
            "virtual_network_name": "vnet-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ce7a2d08-4d86-4109-a7cf-4b5be2cfee90",
            "id": "/subscriptions/782b82e6-6b2a-49d7-bf16-642ff7ea3e80/resourceGroups/rg-monitoring/providers/Microsoft.Network/virtualNetworks/vnet-monitoring",
            "location": "eastus",
            "name": "vnet-monitoring",
            "resource_group_name": "rg-monitoring"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}